@@ -95,8 +95,8 @@ subprojects { subproject ->
   apply plugin: 'com.github.spotbugs'
   apply plugin: 'org.owasp.dependencycheck'
 
-  sourceCompatibility = JavaVersion.VERSION_11
-  targetCompatibility = JavaVersion.VERSION_11
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
   group   = 'com.adaptris'
   version = releaseVersion
   def versionDir = "$buildDir/version"
@@ -158,7 +158,7 @@ subprojects { subproject ->
     umlDoclet("nl.talsmasoftware:umldoclet:1.1.4")
     annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") {changing= true}
 
-    testImplementation ('junit:junit:4.13.2')
+    testImplementation ("org.junit.jupiter:junit-jupiter-engine:5.9.3")
     testImplementation ("org.slf4j:jcl-over-slf4j:$slf4jVersion")
     testImplementation ("org.slf4j:slf4j-simple:$slf4jVersion")
 
@@ -176,7 +176,6 @@ subprojects { subproject ->
       taglets = ["com.adaptris.taglet.ConfigTaglet", "com.adaptris.taglet.LicenseTaglet"]
       options.addStringOption "tagletpath", configurations.javadoc.asPath
       options.addStringOption('Xdoclint:none', '-quiet')
-
     }
   }
 
@@ -283,8 +282,6 @@ subprojects { subproject ->
 	excludeFilter = new File("$rootDir/gradle/spotbugs-exclude.xml")
   }
 
-  // disable spotbugsTests which checks our test code..
-  spotbugsTest.enabled = false
   dependencyCheck  {
     suppressionFiles= [ "https://raw.githubusercontent.com/adaptris/interlok/develop/gradle/owasp-exclude.xml" , "$rootDir/gradle/owasp-exclude.xml"]
     scanConfigurations = [ "api", "compileClasspath", "runtimeClasspath" ]
@@ -298,12 +295,20 @@ subprojects { subproject ->
   }
 
   jacocoTestReport {
-      reports {
-        xml.required= true
-        html.required= true
-      }
+    reports {
+      xml.required= true
+      html.required= true
+    }
+  }
+  
+  test {
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens', 'java.management/javax.management=ALL-UNNAMED']
+    useJUnitPlatform()
   }
 
+  // disable spotbugsTests which checks our test code..
+  spotbugsTest.enabled = false
+  
   javadoc.dependsOn umlJavadoc
   check.dependsOn jacocoTestReport
   clean.dependsOn deleteGeneratedFiles
